--- a/Monetrix/Views/Customer/Edit.cshtml
+++ b/Monetrix/Views/Customer/Edit.cshtml
@@ -1,4 +1,5 @@
-﻿@model Monetrix.Models.Customer
+﻿@using Monetrix.Enums
+@model Monetrix.Models.Customer
 
 @{
     ViewData["Title"] = "Edit";
@@ -53,8 +54,8 @@
             </div>
             <div class="form-group">
                 <label asp-for="Gender" class="control-label"></label>
-                <input asp-for="Gender" class="form-control" />
-                <span asp-validation-for="Gender" class="text-danger"></span>
+                    <select asp-for="Gender" asp-items="Html.GetEnumSelectList<Gender>()" class="form-control"></select>
+                    <span asp-validation-for="Gender" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
