--- a/Monetrix/Views/Shared/_Layout.cshtml
+++ b/Monetrix/Views/Shared/_Layout.cshtml
@@ -29,6 +29,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="AppUser" asp-action="Index">Employee</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Index">Account</a>
+                        </li>
                     </ul>
                 </div>
             </div>
