--- a/Monetrix/Views/Account/Delete.cshtml
+++ b/Monetrix/Views/Account/Delete.cshtml
@@ -4,8 +4,6 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
-
 <h3>Are you sure you want to delete this?</h3>
 <div>
     <h4>Account</h4>
@@ -57,7 +55,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="AccountId" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Details" asp-controller="Account" asp-route-id="@Model.AccountId">Back to List</a>
+        <button type="submit" class="btn btn-danger">Delete</button> |
+        <a asp-action="Details" asp-controller="Account" asp-route-id="@Model.AccountId" class="btn btn-secondary">Cancel</a>
     </form>
 </div>
