--- a/Monetrix/Views/Account/Edit.cshtml
+++ b/Monetrix/Views/Account/Edit.cshtml
@@ -5,14 +5,12 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
-
 <h4>Account</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Edit">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div asp-validation-summary="All" class="text-danger"></div>
             <input type="hidden" asp-for="AccountId" />
             <input type="hidden" asp-for="CustomerId" />
             <div class="form-group form-check">
@@ -23,37 +21,29 @@
             <div class="form-group">
                 <label asp-for="Balance" class="control-label"></label>
                 <input asp-for="Balance" class="form-control" />
-                <span asp-validation-for="Balance" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="AccountNumber" class="control-label"></label>
                 <input asp-for="AccountNumber" class="form-control" />
-                <span asp-validation-for="AccountNumber" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="AccountType" class="control-label"></label>
                 <select asp-for="AccountType" asp-items="Html.GetEnumSelectList<AccountType>()" class="form-control"></select>
-                <span asp-validation-for="AccountType" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="CreatedDate" class="control-label"></label>
                 <input asp-for="CreatedDate" class="form-control" />
-                <span asp-validation-for="CreatedDate" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="CloseDate" class="control-label"></label>
                 <input asp-for="CloseDate" class="form-control" />
-                <span asp-validation-for="CloseDate" class="text-danger"></span>
             </div>          
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
+                <a asp-action="Details" asp-controller="Account" asp-route-id="@Model.AccountId" class="btn btn-secondary">Cancel</a>
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Details" asp-controller="Account" asp-route-id="@Model.AccountId">Back to List</a>
 </div>
 
 @section Scripts {
