--- a/Monetrix/Views/Loan/Delete.cshtml
+++ b/Monetrix/Views/Loan/Delete.cshtml
@@ -4,8 +4,6 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
-
 <h3>Are you sure you want to delete this?</h3>
 <div>
     <h4>Loan</h4>
@@ -64,6 +62,6 @@
     <form asp-action="Delete">
         <input type="hidden" asp-for="LoanId" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Details" asp-route-id="@Model.LoanId">Back to List</a>
+        <a asp-action="Details" asp-route-id="@Model.LoanId" class="btn btn-secondary">Cancel</a>
     </form>
 </div>
