--- a/Monetrix/Views/Transaction/Index.cshtml
+++ b/Monetrix/Views/Transaction/Index.cshtml
@@ -17,9 +17,6 @@
                 @Html.DisplayNameFor(model => model.TransactionType)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Description)
-            </th>
-            <th>
                 @Html.DisplayNameFor(model => model.SenderAccount)
             </th>
             <th>
@@ -44,19 +41,23 @@
                 @Html.DisplayFor(modelItem => item.TransactionType)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Description)
-            </td>
-            <td>
                 @Html.DisplayFor(modelItem => item.SenderAccount.AccountNumber)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.ReceiverAccount.AccountNumber)
+                    @if (string.IsNullOrEmpty(item.ReceiverAccount?.AccountNumber))
+                    {
+                        @Html.DisplayFor(modelItem => item.SenderAccount.AccountNumber)
+                    }
+                    else
+                    {
+                        @Html.DisplayFor(modelItem => item.ReceiverAccount.AccountNumber)
+                    }
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.AppUser.FullName)
             </td>
             <td>
-                <a asp-action="Details" asp-controller="Account" asp-route-id="@item.SenderAccountId">Details</a>
+                    <a asp-action="Details" asp-controller="Account" asp-route-id="@item.SenderAccountId" class="btn btn-sm btn-info">Details</a>
             </td>
         </tr>
 }
