--- a/Monetrix/Views/Loan/Details.cshtml
+++ b/Monetrix/Views/Loan/Details.cshtml
@@ -64,8 +64,12 @@
         </dd>
     </dl>
 </div>
+
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.LoanId" class="btn btn-warning">Edit</a> |
-    <a asp-action="Delete" asp-route-id="@Model?.LoanId" class="btn btn-danger">Delete</a> |
+    @if (User.IsInRole("Admin") || User.IsInRole("LoanOfficer"))
+    {
+        <a asp-action="Edit" asp-route-id="@Model?.LoanId" class="btn btn-warning">Edit</a>
+        <a asp-action="Delete" asp-route-id="@Model?.LoanId" class="btn btn-danger">Delete</a>
+    }
     <a asp-action="Details" asp-controller="Customer" asp-route-id="@Model?.CustomerId" class="btn btn-secondary">Back</a>
 </div>
