--- a/Monetrix/Views/Customer/Index.cshtml
+++ b/Monetrix/Views/Customer/Index.cshtml
@@ -35,9 +35,12 @@
                     <td>@item.Phone</td>
                     <td>@item.Gender</td>
                     <td>
-                        <a asp-action="Edit" asp-route-id="@item.CustomerId" class="btn btn-warning">Edit</a> |
-                        <a asp-action="Details" asp-route-id="@item.CustomerId" class="btn btn-sm btn-info">Details</a> |
-                        <a asp-action="Delete" asp-route-id="@item.CustomerId" class="btn btn-danger">Delete</a>
+                        <a asp-action="Details" asp-route-id="@item.CustomerId" class="btn btn-sm btn-info">Details</a>
+                        @if (User.IsInRole("Admin") || User.IsInRole("CustomerService"))
+                        {
+                                <a asp-action="Edit" asp-route-id="@item.CustomerId" class="btn btn-warning">Edit</a> 
+                                <a asp-action="Delete" asp-route-id = "@item.CustomerId" class= "btn btn-danger"> Delete </a>
+                        }
                     </td>
                 </tr>
             }
